# wgpu-test-project

./: '  .gitignore  Cargo.toml  README.md  build.rs  compile.sh  output.txt  shader_compile.sh  spirv.sh  wrapper.h
src/: FIM.comp  bindings.rs  eikonal_solver.comp  eikonal_solver_comp.spv  generate_noise3d.comp  generate_noise3d_comp.spv  lib.rs  line.frag  line.vert  line_frag.spv  line_vert.spv  local_sort.comp  local_sort_comp.spv  main.rs  mc.comp  mc.spv  mc_render.frag  mc_render.vert  mc_render_frag.spv  mc_render_vert.spv  noise2.comp  radix.comp  radix.rs  radix_comp.spv  radix_sort.rs  ray.comp  ray.spv  ray_frag.comp  ray_march.spv  ray_vert.spv  sphere_tracer.comp  sphere_tracer_comp.spv  two_triangles.frag  two_triangles.vert  two_triangles_frag.spv  two_triangles_vert.spv  vtn_render_frag.spv  vtn_render_vert.spv  vtn_renderer.frag  vtn_renderer.vert  (+2 more)
src/hxt/: CMakeLists.txt
src/hxt/jep/: CMakeCache.txt
src/hxt/joopajoo/: CMakeCache.txt
src/tetMesh/: CMakeLists.txt
src/tetMesh/include/: hxt_bbox.h  hxt_tetDelaunay.h
