[package]
name = "gradu1"
version = "0.1.0"
authors = ["jaankaup <janne.a.kauppinen@student.jyu.fi>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gradu"
path = "src/lib.rs"

[[bin]]
name = "gradu_application"
path = "src/main.rs"

[dependencies]
#wgpu = { version = "0.5.0", features = [ "gfx-backend-vulkan"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", branch = "master"}
#wgpu = { version = "0.5.0", features = [ "vulkan" ] }
winit = { version = "0.22.1", features = ["web-sys"] }
futures = "0.3"
env_logger = "0.7"
raw-window-handle = "0.3"
#zerocopy = "0.3"
log = "0.4"
cgmath = "0.17"
image = "0.23"
png = "0.15"
bytemuck = "1"
mindtree_utils = "0.4.0"
shaderc = "0.6"
num-traits = "0.2.12"
rand = "0.7.3"
#fixed = "1.0.0"

[dependencies.wgt]
package = "wgpu-types"
version = "0.5"
git = "https://github.com/gfx-rs/wgpu"
rev = "041db60f9080769b5edc40888cf9683ccb255399"

#[target.'cfg(all(unix, not(target_os = "ios"), not(target_os = "macos")))'.depencendies]
#gfx-backend-vulkan = "0.5.6"
#gfx-backend-vulkan = { version = "0.5.6", features = ["vulkan"] }
#gfx-backend-vulkan = { version = "0.5", features = ["x11"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
web-sys = {version = "0.3.40", features = [
  "Document",
    "Navigator",
    "Node",
    "NodeList",
    "Gpu",
    "GpuAdapter",
    "GpuAddressMode",
    "GpuBindGroup",
    "GpuBindGroupEntry",
    "GpuBindGroupDescriptor",
    "GpuBindGroupLayout",
    "GpuBindGroupLayoutEntry",
    "GpuBindGroupLayoutDescriptor",
    "GpuBlendDescriptor",
    "GpuBlendFactor",
    "GpuBlendOperation",
    "GpuBindingType",
    "GpuBuffer",
    "GpuBufferBinding",
    "GpuBufferCopyView",
    "GpuBufferDescriptor",
    "GpuCanvasContext",
    "GpuColorDict",
    "GpuColorStateDescriptor",
    "GpuCommandBuffer",
    "GpuCommandBufferDescriptor",
    "GpuCommandEncoder",
    "GpuCommandEncoderDescriptor",
    "GpuCompareFunction",
    "GpuComputePassDescriptor",
    "GpuComputePassEncoder",
    "GpuComputePipeline",
    "GpuComputePipelineDescriptor",
    "GpuCullMode",
    "GpuDepthStencilStateDescriptor",
    "GpuDevice",
    "GpuDeviceDescriptor",
    "GpuExtent3dDict",
    "GpuFilterMode",
    "GpuFrontFace",
    "GpuIndexFormat",
    "GpuInputStepMode",
    "GpuLimits",
    "GpuLoadOp",
    "GpuOrigin3dDict",
    "GpuPipelineLayout",
    "GpuPipelineLayoutDescriptor",
    "GpuPowerPreference",
    "GpuPrimitiveTopology",
    "GpuProgrammableStageDescriptor",
    "GpuQueue",
    "GpuRasterizationStateDescriptor",
    "GpuRenderPassColorAttachmentDescriptor",
    "GpuRenderPassDepthStencilAttachmentDescriptor",
    "GpuRenderPassDescriptor",
    "GpuRenderPassEncoder",
    "GpuRenderPipeline",
    "GpuRenderPipelineDescriptor",
    "GpuRequestAdapterOptions",
    "GpuSampler",
    "GpuSamplerDescriptor",
    "GpuShaderModule",
    "GpuShaderModuleDescriptor",
    "GpuStencilOperation",
    "GpuStencilStateFaceDescriptor",
    "GpuStoreOp",
    "GpuSwapChain",
    "GpuSwapChainDescriptor",
    "GpuTexture",
    "GpuTextureAspect",
    "GpuTextureComponentType",
    "GpuTextureCopyView",
    "GpuTextureDescriptor",
    "GpuTextureDimension",
    "GpuTextureFormat",
    "GpuTextureViewDescriptor",
    "GpuTextureViewDimension",
    "GpuTextureView",
    "GpuVertexAttributeDescriptor",
    "GpuVertexBufferLayoutDescriptor",
    "GpuVertexFormat",
    "GpuVertexStateDescriptor",
    "GpuVertexAttributeDescriptor",
    "HtmlCanvasElement",
    "Window",

]}
js-sys = "0.3.39"
wasm-bindgen-futures = "0.4.12"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false

#[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
#[target.'cfg(target_arch = "wasm32")']
#console_error_panic_hook = "0.1.6"
#console_log = "0.1.2"
